--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 tokio   = { version = "1.15.0", features = ["full"] }
 clap    = { version = "3.0.12", features = ["derive"] }
 futures = "0.3.19"
+warp    = "0.3"
